merubah judul index

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nginx Actions</title>
+    <title>Nginx alexa imut</title>
 </head>
 <body>
     <h1>Hei, container Nginx ini dibuild pakai GitHub actions!</h1>
